8367706: Remove redundant register used by cmove in C1 LIR generation